// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Examples should match snapshot: Button0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  position: relative;
  padding: 8px 14px;
  border-radius: 2px;
  user-select: none;
  outline: none;
  border: none;
  background: #3598db;
  color: white;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.css-2,
[data-css-2] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

<button
  data-css-1=""
  name="button"
  type="button"
>
  <div
    data-css-2=""
    data-css-0=""
  >
    Hello you
  </div>
</button>
`;

exports[`Component Examples should match snapshot: Button1 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  position: relative;
  padding: 8px 14px;
  border-radius: 2px;
  user-select: none;
  outline: none;
  border: none;
  background: #3598db;
  color: white;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

<div
  data-css-0=""
>
   
  <button
    data-css-1=""
    name="submit"
    type="submit"
  >
    <div
      data-css-2=""
    >
       Hello with icon 
      <div
        data-css-0=""
        style="margin-left:10px"
      >
        <div
          data-css-0=""
          style="width:16px;height:16px;fill:white;stroke:"
        />
      </div>
    </div>
  </button>
   
</div>
`;

exports[`Component Examples should match snapshot: Card0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-2,
[data-css-2] {
  width: 100%;
  background: white;
  box-shadow: 2px 2px 2px rgba(230, 230, 230, 0.5);
}

.css-3,
[data-css-3] {
  padding: 15px;
  position: relative;
}

.css-4,
[data-css-4] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div
  data-css-0=""
>
   
  <div
    data-css-0=""
    data-css-2=""
  >
    <div
      data-css-3=""
      data-css-0=""
    >
      <div
        data-css-4=""
        data-css-0=""
      >
         Cards 
      </div>
      <div
        data-css-1=""
        data-css-0=""
      >
         Cards are the basic elements to fit content in. They can may contain any kind of content. 
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: ChatBubble0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-2,
[data-css-2] {
  width: 100%;
  height: 100%;
}

.css-3,
[data-css-3] {
  padding: 0 15px 15px 15px;
}

.css-4,
[data-css-4] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-5,
[data-css-5] {
  font-weight: bold;
  opacity: 0.5;
}

.css-6,
[data-css-6] {
  opacity: 0.5;
}

.css-7,
[data-css-7] {
  margin-top: 4px;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-8,
[data-css-8] {
  flex-shrink: 0;
  -webkit-flex-shrink: 0;
}

.css-9,
[data-css-9] {
  white-space: pre-wrap;
}

.css-9 a,
[data-css-9] a {
  color: #fff;
  text-decoration: underline;
}

.css-10,
[data-css-10] {
  padding-left: 15px;
  flex: 1;
  position: relative;
  -webkit-flex: 1;
}

.css-10:before,
[data-css-10]:before,
.css-10[data-simulate-before],
[data-css-10][data-simulate-before] {
  content: "";
  background: transparent;
  position: absolute;
  left: 10px;
  top: 15px;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 6px 5px 6px 0;
  border-color: transparent white transparent transparent;
}

.css-14,
[data-css-14] {
  padding: 10px;
  border-radius: 6px;
  box-shadow: 2px 3px 3px 0px rgba(211, 211, 211, .25);
  background: white;
}

.css-15,
[data-css-15] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-16,
[data-css-16] {
  border-radius: 50%;
  overflow: hidden;
  flex-shrink: 0;
  position: relative;
  width: 40px;
  height: 40px;
  -webkit-flex-shrink: 0;
}

.css-16:before,
[data-css-16]:before,
.css-16[data-simulate-before],
[data-css-16][data-simulate-before] {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 50%;
}

.css-20,
[data-css-20] {
  background-image: url(https://placeimg.com/40/40/people?t=3);
  background-size: contain;
}

.css-21,
[data-css-21] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
  -webkit-flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-22,
[data-css-22] {
  margin-top: 4px;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: reverse;
  -webkit-flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.css-23,
[data-css-23] {
  padding-left: 0;
  flex: 1;
  position: relative;
  padding-right: 15px;
  -webkit-flex: 1;
}

.css-23:before,
[data-css-23]:before,
.css-23[data-simulate-before],
[data-css-23][data-simulate-before] {
  content: "";
  background: transparent;
  position: absolute;
  left: initial;
  top: 15px;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 6px 0 6px 5px;
  border-color: transparent transparent transparent white;
  right: 10px;
}

.css-27,
[data-css-27] {
  background-image: url(https://placeimg.com/40/40/people?t=1);
  background-size: contain;
}

<div
  data-css-0=""
>
  <div
    data-css-3=""
  >
    <div
      class="info"
      data-css-4=""
    >
      <div
        data-css-15=""
        data-css-5=""
        data-css-0=""
      >
        You
      </div>
      <div
        data-css-15=""
        data-css-0=""
        data-css-6=""
      >
        a minute ago
      </div>
    </div>
    <div
      class="content"
      data-css-7=""
    >
      <div
        class="image"
        data-css-8=""
      >
        <div
          data-css-16=""
        >
          <div
            alt=""
            data-css-2=""
            data-css-0=""
            data-css-20=""
          />
        </div>
      </div>
      <div
        data-css-10=""
      >
        <div
          data-css-14=""
        >
          <div
            data-css-1=""
            data-css-0=""
            data-css-9=""
          >
            Hello World
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-3=""
  >
    <div
      class="info"
      data-css-21=""
    >
      <div
        data-css-15=""
        data-css-5=""
        data-css-0=""
      >
        Agent
      </div>
      <div
        data-css-15=""
        data-css-0=""
        data-css-6=""
      >
        just now
      </div>
    </div>
    <div
      class="content"
      data-css-22=""
    >
      <div
        class="image"
        data-css-8=""
      >
        <div
          data-css-16=""
        >
          <div
            alt=""
            data-css-2=""
            data-css-0=""
            data-css-27=""
          />
        </div>
      </div>
      <div
        data-css-23=""
      >
        <div
          data-css-14=""
        >
          <div
            data-css-1=""
            data-css-0=""
            data-css-9=""
          >
            Hello You
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Examples should match snapshot: Checkbox0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  position: relative;
}

.css-3,
[data-css-3] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-4,
[data-css-4] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  background-color: #3598db;
  border-width: 3px;
  border-style: solid;
  border-color: #3598db;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-5,
[data-css-5] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-7,
[data-css-7] {
  position: relative;
  bottom: 1px;
}

.css-8,
[data-css-8] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-9,
[data-css-9] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-10,
[data-css-10] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border-width: 3px;
  border-style: solid;
  border-color: lightGrey;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

<div
  data-css-1=""
>
   
  <div
    data-css-1=""
  >
    <div
      data-css-5=""
      data-css-0=""
    >
      <div
        data-css-0=""
      >
        <div
          data-css-2=""
          data-css-6=""
          data-css-4=""
        >
          <div
            data-css-7=""
            data-css-1=""
          >
            <div
              data-css-1=""
              size="14"
              style="width:14px;height:14px;fill:#fff;stroke:"
            />
          </div>
          <div
            data-css-1=""
            data-css-8=""
          >
            <input
              checked=""
              id="ok"
              style="opacity:0;width:25px;height:25px;margin:0"
              type="checkbox"
              value="true"
            />
          </div>
        </div>
      </div>
      <label
        for="ok"
      >
        <div
          data-css-1=""
          data-css-9=""
        >
          <div
            data-css-3=""
            data-css-1=""
          >
            Are you ok?
          </div>
        </div>
      </label>
    </div>
    <div
      data-css-5=""
      data-css-0=""
    >
      <div
        data-css-0=""
      >
        <div
          data-css-2=""
          data-css-10=""
          data-css-6=""
        >
          <div
            data-css-1=""
            data-css-8=""
          >
            <input
              id="notok"
              style="opacity:0;width:25px;height:25px;margin:0"
              type="checkbox"
              value="false"
            />
          </div>
        </div>
      </div>
      <label
        for="notok"
      >
        <div
          data-css-1=""
          data-css-9=""
        >
          <div
            data-css-3=""
            data-css-1=""
          >
            Are you not ok?
          </div>
        </div>
      </label>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: Circle0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  border: 1px solid lightGrey;
  border-radius: 50%;
  height: 40px;
  width: 40px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-4,
[data-css-4] {
  background-color: #3598db;
  border-radius: 50%;
  height: 40px;
  width: 40px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-5,
[data-css-5] {
  background-color: #bada55;
  border-radius: 50%;
  height: 20px;
  width: 20px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-6,
[data-css-6] {
  background-color: gray;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

<div
  data-css-0=""
>
  <div
    data-css-1=""
    data-css-2=""
  >
    <div
      data-css-3=""
      style="width:21.5px;height:21.5px;fill:lightGrey;stroke:"
    />
  </div>
  <div
    data-css-4=""
    data-css-2=""
  />
  <div
    data-css-5=""
    data-css-2=""
  />
  <div
    data-css-6=""
    data-css-2=""
  />
</div>
`;

exports[`Component Examples should match snapshot: CountIndicator0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  position: relative;
}

.css-3,
[data-css-3] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-4,
[data-css-4] {
  position: absolute;
  top: 0;
  left: 35px;
}

.css-5,
[data-css-5] {
  background-color: #e84c3d;
  border-radius: 50%;
  height: 18px;
  width: 18px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-6,
[data-css-6] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

<div
  data-css-2=""
  data-css-1=""
>
  <div
    data-css-3=""
    data-css-1=""
  >
    Hello
  </div>
  <div
    color="warn"
    data-css-1=""
    data-css-4=""
  >
    <div
      data-css-5=""
      data-css-0=""
    >
      <div
        data-css-1=""
        data-css-6=""
      >
        9+
      </div>
    </div>
  </div>
</div>
`;

exports[`Component Examples should match snapshot: ExpandingTextarea0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  outline: none;
  border: 0;
  font-size: 13px;
  resize: none;
  flex: 1;
  min-height: 20px;
  max-height: 25vh;
  width: 100%;
  padding-left: 15px;
  -webkit-flex: 1;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 1;
}

<div
  data-css-0=""
>
   
  <div
    data-css-2=""
  >
    <textarea
      cols="1"
      data-css-1=""
      placeholder="Write somthing..."
      rows="1"
    />
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: Form0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  position: absolute;
  bottom: 2px;
  right: 15px;
}

.css-3,
[data-css-3] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-4,
[data-css-4] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-4:-webkit-autofill ~ .label,
[data-css-4]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-4:-webkit-autofill ~ .checkmark,
[data-css-4]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-4:-webkit-autofill,
[data-css-4]:-webkit-autofill,
.css-4[data-simulate-webkitautofill],
[data-css-4][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-8,
[data-css-8] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-9,
[data-css-9] {
  position: relative;
}

.css-10,
[data-css-10] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-11,
[data-css-11] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-12,
[data-css-12] {
  width: 100%;
  background: white;
  box-shadow: 2px 2px 2px rgba(230, 230, 230, 0.5);
}

.css-13,
[data-css-13] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-14,
[data-css-14] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-15,
[data-css-15] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-16,
[data-css-16] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-17,
[data-css-17] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-18,
[data-css-18] {
  border-radius: 3px;
  height: 25px;
  width: 25px;
  border-width: 3px;
  border-style: solid;
  border-color: lightGrey;
  transition: 250ms;
  -webkit-transition: 250ms;
  -moz-transition: 250ms;
}

.css-19,
[data-css-19] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 1;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 1;
}

.css-20,
[data-css-20] {
  height: 50px;
  background-color: #bada55;
  position: relative;
  z-index: 2;
}

.css-21,
[data-css-21] {
  height: 50px;
  width: 50px;
  border-radius: 2px;
  background-color: transparent;
}

.css-22,
[data-css-22] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-23,
[data-css-23] {
  -webkit-overflow-scrolling: touch;
  overflow: auto;
  overflow-x: hidden;
  background-color: #f3f5f7;
  height: 100%;
}

.css-24,
[data-css-24] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-25,
[data-css-25] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  transition: padding-top .225s ease-out;
  height: calc(30px*3);
  width: 100%;
  padding: 10px 15px;
  padding-top: 10px;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-25:invalid:focus,
[data-css-25]:invalid:focus,
.css-25[data-simulate-invalidfocus],
[data-css-25][data-simulate-invalidfocus] {
  color: red;
}

.css-29,
[data-css-29] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  transition: padding-top .225s ease-out;
  height: calc(30px*2);
  width: 100%;
  padding: 10px 15px;
  padding-top: 10px;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-29:invalid:focus,
[data-css-29]:invalid:focus,
.css-29[data-simulate-invalidfocus],
[data-css-29][data-simulate-invalidfocus] {
  color: red;
}

.css-33,
[data-css-33] {
  position: relative;
  padding: 8px 14px;
  border-radius: 2px;
  user-select: none;
  outline: none;
  border: none;
  background: #bada55;
  color: white;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

@media (max-width: 640px) {
  .css-21,
  [data-css-21] {
    height: 40px;
    width: 40px;
  }
}

@media (min-width: 641px) and (max-width: 930px), (min-width: 931px) {
  .css-1u21jvx,
  [data-css-1u21jvx] {
    padding-top: 0;
  }
}

<div
  data-css-19=""
>
  <div
    data-css-20=""
    data-css-0=""
  >
    <div
      data-css-15=""
      data-css-21=""
      textcolor="#333333"
    >
      <div
        data-css-1=""
        style="width:21.5px;height:21.5px;fill:;stroke:white"
      />
    </div>
    <div
      data-css-22=""
      data-css-1=""
    >
       Create new account 
    </div>
  </div>
  <div
    data-css-19=""
    data-css-23=""
    data-css-1u21jvx=""
    id="scroll-container"
  >
    <form>
      <div
        data-css-1=""
        data-css-12=""
      >
        <div
          data-css-24=""
        >
          <div
            data-css-3=""
            data-css-0=""
          >
            <div
              data-css-9=""
              data-css-1=""
              style="width:100%"
            >
              <input
                aria-required="true"
                data-css-4=""
                name="name"
                pattern="[A-Za-z ]*"
                placeholder="Your first- and surname"
                required=""
                type="text"
              />
              <div
                class="checkmark"
                data-css-8=""
                data-css-1=""
              >
                <div
                  data-css-1=""
                  style="width:16px;height:16px;fill:lightGrey;stroke:"
                />
              </div>
            </div>
          </div>
          <div
            data-css-3=""
            data-css-0=""
          >
            <div
              data-css-9=""
              data-css-1=""
              style="width:100%"
            >
              <input
                aria-required="true"
                data-css-4=""
                name="number"
                placeholder="Your email address"
                required=""
                type="email"
              />
              <div
                class="checkmark"
                data-css-8=""
                data-css-1=""
              >
                <div
                  data-css-1=""
                  style="width:16px;height:16px;fill:lightGrey;stroke:"
                />
              </div>
            </div>
          </div>
          <div
            data-css-3=""
            data-css-0=""
          >
            <div
              data-css-9=""
              data-css-1=""
              style="width:100%"
            >
              <textarea
                data-css-25=""
                name="longStory"
                placeholder="A long story"
                type="text"
              />
              <div
                class="checkmark"
                data-css-8=""
                data-css-1=""
              >
                <div
                  data-css-1=""
                  style="width:16px;height:16px;fill:lightGrey;stroke:"
                />
              </div>
            </div>
          </div>
          <div
            data-css-3=""
            data-css-0=""
          >
            <div
              data-css-9=""
              data-css-1=""
              style="width:100%"
            >
              <textarea
                data-css-29=""
                maxlength="15"
                name="limitedStory"
                placeholder="A limited story"
                type="text"
              />
              <div
                class="checkmark"
                data-css-8=""
                data-css-1=""
              >
                <div
                  data-css-1=""
                  style="width:16px;height:16px;fill:lightGrey;stroke:"
                />
              </div>
              <div
                data-css-1=""
                data-css-2=""
              >
                <div
                  data-css-10=""
                  data-css-1=""
                >
                  0/15
                </div>
              </div>
            </div>
          </div>
          <div
            data-css-3=""
            data-css-0=""
          >
            <div
              data-css-9=""
              data-css-1=""
              style="width:100%"
            >
              <input
                aria-required="false"
                data-css-4=""
                minlength="3"
                name="number"
                placeholder="Your phone number"
                type="text"
              />
              <div
                class="checkmark"
                data-css-8=""
                data-css-1=""
              >
                <div
                  data-css-1=""
                  style="width:16px;height:16px;fill:lightGrey;stroke:"
                />
              </div>
            </div>
          </div>
          <div
            data-css-14=""
            data-css-0=""
          >
            <div
              data-css-0=""
            >
              <div
                data-css-9=""
                data-css-18=""
                data-css-15=""
              >
                <div
                  data-css-1=""
                  data-css-16=""
                >
                  <input
                    id="accept"
                    required=""
                    style="opacity:0;width:25px;height:25px;margin:0"
                    type="checkbox"
                    value="false"
                  />
                </div>
              </div>
            </div>
            <label
              for="accept"
            >
              <div
                data-css-1=""
                data-css-17=""
              >
                <div
                  data-css-13=""
                  data-css-1=""
                >
                  Hereby I accept the terms & blablabla
                </div>
              </div>
            </label>
          </div>
          <div
            data-css-14=""
            data-css-15=""
          >
            <button
              data-css-33=""
              name="submit"
              type="submit"
            >
              <div
                data-css-11=""
                data-css-1=""
              >
                Create my account
              </div>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Component Examples should match snapshot: Hero0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-2,
[data-css-2] {
  padding-left: 15px;
  padding-right: 15px;
}

.css-3,
[data-css-3] {
  position: absolute;
  right: -150px;
  top: -70px;
  width: 360px;
  height: 360px;
}

.css-4,
[data-css-4] {
  width: 150px;
}

.css-5,
[data-css-5] {
  width: 142px;
}

.css-6,
[data-css-6] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-8,
[data-css-8] {
  overflow-y: hidden;
  overflow-x: hidden;
  height: 232px;
  background-color: #3598db;
  position: relative;
  box-shadow: 0px -1px 5px rgba(0,0,0,0.3);
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-around;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 100%;
  margin: 0;
  min-height: 100%;
  width: 100%;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-flex: 0 0 auto;
}

.css-11,
[data-css-11] {
  position: relative;
  padding: 8px 14px;
  border-radius: 2px;
  user-select: none;
  outline: none;
  border: none;
  background: rgba(0,0,0,0.2);
  color: white;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

@media (min-width: 641px) and (max-width: 930px), (min-width: 931px) {
  .css-5,
  [data-css-5] {
    width: 50%;
  }
}

<div
  data-css-9=""
  data-css-8=""
>
  <div
    data-css-5=""
    data-css-7=""
    data-css-2=""
  >
    <div
      data-css-6=""
      data-css-0=""
    >
      You are my Hero!
    </div>
    <div
      data-css-10=""
    >
      <button
        data-css-11=""
        name="button"
        type="button"
      >
        <div
          data-css-1=""
          data-css-0=""
        >
          Thank you
        </div>
      </button>
    </div>
  </div>
  <div
    data-css-4=""
    data-css-0=""
  >
    <img
      data-css-3=""
      src="https://placeimg.com/500/500/people"
    />
  </div>
</div>
`;

exports[`Component Examples should match snapshot: Image0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  background-image: url(https://placeimg.com/225/225/people);
  background-size: cover;
}

<div
  data-css-0=""
>
   
  <div
    data-css-0=""
    data-css-1=""
    style="width:225px;height:225px"
  />
   
</div>
`;

exports[`Component Examples should match snapshot: Image1 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  background-image: url(https://placeimg.com/nothing);
}

<div
  data-css-0=""
>
   
  <div
    data-css-1=""
    data-css-0=""
    style="width:225px;height:225px"
  />
   
</div>
`;

exports[`Component Examples should match snapshot: Input0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  position: absolute;
  bottom: 2px;
  right: 15px;
}

.css-3,
[data-css-3] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-4,
[data-css-4] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-4:-webkit-autofill ~ .label,
[data-css-4]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-4:-webkit-autofill ~ .checkmark,
[data-css-4]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-4:-webkit-autofill,
[data-css-4]:-webkit-autofill,
.css-4[data-simulate-webkitautofill],
[data-css-4][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-8,
[data-css-8] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-9,
[data-css-9] {
  position: relative;
}

.css-10,
[data-css-10] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  transition: padding-top .225s ease-out;
  height: calc(30px*5);
  width: 100%;
  padding: 10px 15px;
  padding-top: 10px;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-10:invalid:focus,
[data-css-10]:invalid:focus,
.css-10[data-simulate-invalidfocus],
[data-css-10][data-simulate-invalidfocus] {
  color: red;
}

.css-14,
[data-css-14] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

<div
  data-css-1=""
>
   
  <div
    data-css-3=""
    data-css-0=""
  >
    <div
      data-css-9=""
      data-css-1=""
      style="width:100%"
    >
      <input
        aria-required="true"
        data-css-4=""
        name="email"
        placeholder="Your email"
        required=""
        type="email"
      />
      <div
        class="checkmark"
        data-css-8=""
        data-css-1=""
      >
        <div
          data-css-1=""
          style="width:16px;height:16px;fill:lightGrey;stroke:"
        />
      </div>
    </div>
  </div>
  <div
    data-css-3=""
    data-css-0=""
  >
    <div
      data-css-9=""
      data-css-1=""
      style="width:100%"
    >
      <textarea
        data-css-10=""
        maxlength="255"
        minlength="50"
        name="inquiry"
        placeholder="Your question"
        type="text"
      />
      <div
        class="checkmark"
        data-css-8=""
        data-css-1=""
      >
        <div
          data-css-1=""
          style="width:16px;height:16px;fill:lightGrey;stroke:"
        />
      </div>
      <div
        data-css-1=""
        data-css-2=""
      >
        <div
          data-css-14=""
          data-css-1=""
        >
          0/255
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: List0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-3,
[data-css-3] {
  width: 100%;
  background: white;
  box-shadow: 2px 2px 2px rgba(230, 230, 230, 0.5);
}

.css-4,
[data-css-4] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-5,
[data-css-5] {
  width: 12px;
  height: 12px;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-7,
[data-css-7] {
  width: 100%;
}

.css-8,
[data-css-8] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  cursor: pointer;
  background-color: white;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  cursor: pointer;
  flex: 1 1 100%;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 1 1 100%;
}

.css-10,
[data-css-10] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 1 1 100%;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 1 1 100%;
}

.css-11,
[data-css-11] {
  box-sizing: border-box;
  flex: 0 1 auto;
  -webkit-flex: 0 1 auto;
}

<div
  data-css-1=""
>
   
  <div
    data-css-1=""
    data-css-3=""
  >
    <div
      data-css-6=""
    >
      <div
        data-css-4=""
        data-css-0=""
      >
        <div
          data-css-2=""
          data-css-1=""
        >
          Item 1
        </div>
      </div>
      <div
        data-css-4=""
        data-css-0=""
      >
        <div
          data-css-2=""
          data-css-1=""
        >
          Item 2
        </div>
      </div>
      <div
        data-css-4=""
        data-css-0=""
      >
        <div
          data-css-2=""
          data-css-1=""
        >
          Item 3
        </div>
      </div>
      <div
        data-css-4=""
        data-css-0=""
      >
        <div
          data-css-2=""
          data-css-1=""
        >
          Item 4
        </div>
      </div>
      <div
        data-css-8=""
        data-css-9=""
      >
        <div
          data-css-10=""
          data-css-7=""
        >
          <div
            data-css-2=""
            data-css-1=""
          >
            ChevronRightListItem to show indicator
          </div>
        </div>
        <div
          data-css-11=""
        >
          <div
            data-css-5=""
            data-css-1=""
            style="width:16px;height:16px;fill:;stroke:#7e8c8d"
          />
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: List1 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-4,
[data-css-4] {
  width: 100%;
  background: white;
  box-shadow: 2px 2px 2px rgba(230, 230, 230, 0.5);
}

.css-5,
[data-css-5] {
  padding: 10px 15px;
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-6,
[data-css-6] {
  width: 12px;
  height: 12px;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-8,
[data-css-8] {
  width: 100%;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex: 1 1 100%;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 1 1 100%;
}

.css-10,
[data-css-10] {
  box-sizing: border-box;
  flex: 0 1 auto;
  -webkit-flex: 0 1 auto;
}

.css-11,
[data-css-11] {
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  padding-bottom: 15px;
}

.css-12,
[data-css-12] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-13,
[data-css-13] {
  background-image: url(https://placeimg.com/80/80/people?t=1);
}

.css-14,
[data-css-14] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 1 1 100%;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 1 1 100%;
}

.css-15,
[data-css-15] {
  background-image: url(https://placeimg.com/80/80/people?t=2);
}

.css-16,
[data-css-16] {
  background-image: url(https://placeimg.com/80/80/people?t=3);
}

.css-17,
[data-css-17] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-18,
[data-css-18] {
  background-color: white;
  border-radius: 50%;
  height: 40px;
  width: 40px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

<div
  data-css-1=""
>
   
  <div
    data-css-1=""
  >
    <div
      data-css-1=""
    >
      <div
        data-css-11=""
        data-css-1=""
      >
        <div
          data-css-1=""
          data-css-12=""
        >
          A list with images
        </div>
      </div>
      <div
        data-css-1=""
        data-css-4=""
      >
        <div
          data-css-7=""
        >
          <div
            data-css-3=""
          >
            <div
              data-css-13=""
              data-css-1=""
            />
            <div
              data-css-5=""
              data-css-14=""
            >
              <div
                data-css-9=""
                data-css-8=""
              >
                <div
                  data-css-2=""
                  data-css-1=""
                >
                  Jules
                </div>
              </div>
              <div
                data-css-10=""
              >
                <div
                  data-css-6=""
                  data-css-1=""
                  style="width:16px;height:16px;fill:;stroke:#7e8c8d"
                />
              </div>
            </div>
          </div>
          <div
            data-css-3=""
          >
            <div
              data-css-1=""
              data-css-15=""
            />
            <div
              data-css-5=""
              data-css-14=""
            >
              <div
                data-css-2=""
                data-css-1=""
              >
                Luan
              </div>
            </div>
          </div>
          <div
            data-css-3=""
          >
            <div
              data-css-1=""
              data-css-16=""
            />
            <div
              data-css-5=""
              data-css-14=""
            >
              <div
                data-css-2=""
                data-css-1=""
              >
                Uli
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-17=""
    >
      <div
        data-css-18=""
        data-css-0=""
      >
        <svg
          height="30px"
          preserveAspectRatio="xMidYMid"
          viewBox="0 0 100 100"
          width="30px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="none"
            height="100"
            width="100"
            x="0"
            y="0"
          />
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="40"
            stroke="#ffffff"
            stroke-linecap="round"
            stroke-width="10"
          />
          <circle
            cx="50"
            cy="50"
            fill="none"
            r="40"
            stroke="#369980"
            stroke-linecap="round"
            stroke-width="8"
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="2s"
              from="0"
              repeatCount="indefinite"
              to="502"
            />
            <animate
              attributeName="stroke-dasharray"
              dur="2s"
              repeatCount="indefinite"
              values="125.5 125.5;1 250;125.5 125.5"
            />
          </circle>
        </svg>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: ListIcon0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  background-color: #3598db;
  border-radius: 50%;
  height: 40px;
  width: 40px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

<div
  data-css-1=""
>
   
  <div
    data-css-2=""
    data-css-0=""
    height="40"
    width="40"
  >
    <div
      data-css-1=""
      style="width:21.5px;height:21.5px;fill:#ffffff;stroke:"
    />
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: PhoneInput0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-1:-webkit-autofill ~ .label,
[data-css-1]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-1:-webkit-autofill ~ .checkmark,
[data-css-1]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-1:-webkit-autofill,
[data-css-1]:-webkit-autofill,
.css-1[data-simulate-webkitautofill],
[data-css-1][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-5,
[data-css-5] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-6,
[data-css-6] {
  position: relative;
}

.css-7,
[data-css-7] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div
  data-css-0=""
>
   
  <div
    style="position:relative;cursor:text;width:100%"
  >
    <div
      data-css-7=""
      data-css-0=""
      style="margin-left:5px;user-select:none;position:absolute;z-index:10;width:100%;top:50%;transform:translateY(-50%)"
    >
      +
    </div>
    <div
      data-css-6=""
      data-css-0=""
      style="width:100%"
    >
      <input
        aria-required="true"
        data-css-1=""
        name="phone"
        placeholder="Example Placeholder"
        required=""
        type="tel"
        value="4907615555555"
      />
      <div
        class="checkmark"
        data-css-5=""
        data-css-0=""
      >
        <div
          data-css-0=""
          style="width:16px;height:16px;fill:lightGrey;stroke:"
        />
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: Pill0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  background-color: #3598db;
  display: inline-block;
  border-radius: 10px;
  padding: 2px 15px;
  cursor: default;
}

.css-2,
[data-css-2] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

.css-3,
[data-css-3] {
  background-color: #e84c3d;
  display: inline-block;
  border-radius: 10px;
  padding: 2px 15px;
  cursor: default;
}

<div
  data-css-0=""
>
  <div
    data-css-0=""
    data-css-1=""
  >
    <div
      data-css-0=""
      data-css-2=""
    >
      Important message
    </div>
  </div>
  <div
    data-css-3=""
    data-css-0=""
  >
    <div
      data-css-0=""
      data-css-2=""
    >
      A warning
    </div>
  </div>
</div>
`;

exports[`Component Examples should match snapshot: ProfileImage0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  width: 100%;
  background: white;
  box-shadow: 2px 2px 2px rgba(230, 230, 230, 0.5);
}

.css-2,
[data-css-2] {
  width: 100%;
  height: 100%;
}

.css-3,
[data-css-3] {
  border-radius: 50%;
  overflow: hidden;
  flex-shrink: 0;
  position: relative;
  width: 40px;
  height: 40px;
  -webkit-flex-shrink: 0;
}

.css-3:before,
[data-css-3]:before,
.css-3[data-simulate-before],
[data-css-3][data-simulate-before] {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-radius: 50%;
}

.css-7,
[data-css-7] {
  background-image: url(https://placeimg.com/100/100/people);
  background-size: contain;
}

<div
  data-css-0=""
>
   
  <div
    data-css-0=""
    data-css-1=""
  >
    <div
      data-css-3=""
    >
      <div
        alt=""
        data-css-2=""
        data-css-0=""
        data-css-7=""
      />
    </div>
    <div
      data-css-3=""
    >
      <svg
        style="width:40px;height:40px;background-color:#B4B4B4;box-sizing:border-box;padding-top:4px"
        version="1.1"
        viewBox="0 0 500 500"
      >
        <path
          d="M0.362506473,496.000708 C1.70895909,480.36711 8.07871569,467.694027 20.7664423,455.124822 C31.7969964,444.217661 42.6204039,436.894281 60.9010875,428.064675 C82.9104091,417.365269 93.112377,414.352815 123.873641,409.314745 C142.723977,406.250352 147.229415,405.315453 155.204557,402.822387 C167.633351,398.875034 177.006732,394.667986 179.699637,391.811348 L180.942517,390.512877 L181.719316,358.622415 L182.496116,326.783892 L180.113931,322.680722 C177.369239,318.110102 172.345935,308.189779 170.170896,303.151709 C169.238736,300.970277 166.804764,290.894137 163.231486,274.689212 L157.742103,249.550802 L154.997411,248.615903 C148.834801,246.538348 145.934749,241.604156 143.345417,228.827196 C142.361471,224.048821 140.600725,216.829319 139.357846,212.726149 C134.852408,197.196428 134.593475,196.053774 134.541688,187.847433 C134.489902,180.991503 134.593475,180.056604 135.680994,177.719355 C137.079234,174.706901 139.720352,171.746386 141.066805,171.746386 C141.791818,171.746386 141.895391,171.53863 141.481098,170.499853 C141.222165,169.772709 140.445365,166.448622 139.720352,163.072595 C135.111341,141.154395 132.832729,100.018816 135.473848,85.7875673 C139.150699,65.427533 147.902641,48.8070968 163.1797,32.9138047 C174.365614,21.3314382 185.603314,13.8003031 200.517866,7.87927272 C206.991196,5.33426843 219.316416,2.21793665 227.705852,1.0233428 C238.114966,-0.430945364 263.801139,-0.327067638 273.795961,1.28303712 C299.585707,5.3862073 319.10927,14.8910192 335.422061,31.3556388 C352.045572,48.1318916 361.93682,67.1415154 364.940445,88.176755 C366.442258,98.7203442 366.027965,105.732091 361.93682,140.063679 L358.156396,171.486691 L359.502848,172.161897 C363.386846,174.187512 365.251165,177.92711 365.613672,184.523346 C365.872605,189.82111 365.406525,192.521931 358.933195,221.088305 C355.981357,234.176899 354.997411,237.656803 353.288452,241.136707 C350.802693,246.278654 346.504402,250.693457 344.018643,250.693457 C342.620404,250.693457 342.413257,250.901213 342.102538,252.667134 C340.341792,262.951029 336.768514,280.194732 334.904195,287.57005 C332.625583,296.503535 332.470223,296.970984 325.064733,311.877438 L317.555671,327.095525 L316.986018,338.885647 C316.675298,345.378005 316.519938,358.154965 316.675298,367.296205 C316.986018,389.266344 317.244951,390.35706 323.821854,394.356353 C329.518384,397.784318 346.193682,403.757287 355.722424,405.730964 C357.949249,406.198413 367.477991,407.860457 376.851372,409.418623 C403.676851,413.885365 411.910927,416.014858 427.343345,422.611094 C449.870533,432.219784 467.840497,443.438578 479.699637,455.280639 C491.765924,467.382394 498.601761,481.094254 499.637494,495.481319 L500,500 L249.974107,500 L0,500 L0.362506473,496.000708 Z"
          fill="#909090"
          fill-rule="nonzero"
          id="Shape"
        />
      </svg>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: RadioButton0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  position: relative;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-4,
[data-css-4] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-5,
[data-css-5] {
  margin-right: 40px;
  width: auto;
}

.css-6,
[data-css-6] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-7,
[data-css-7] {
  box-sizing: border-box;
  align-content: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex: 0 0 auto;
  -webkit-align-content: flex-start;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-flex: 0 0 auto;
}

.css-8,
[data-css-8] {
  opacity: 0;
  margin: 0;
}

.css-9,
[data-css-9] {
  position: relative;
  top: 10px;
}

.css-10,
[data-css-10] {
  background-color: lightGrey;
  border-radius: 50%;
  height: 20px;
  width: 20px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-11,
[data-css-11] {
  background-color: white;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-12,
[data-css-12] {
  background-color: white;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-13,
[data-css-13] {
  position: relative;
  top: -8px;
}

.css-14,
[data-css-14] {
  background-color: #3598db;
  border-radius: 50%;
  height: 20px;
  width: 20px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-15,
[data-css-15] {
  background-color: #3598db;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

<div
  data-css-1=""
>
   
  <div
    data-css-1=""
  >
    <div
      data-css-7=""
      style="width:100%"
    >
      <div
        data-css-5=""
        data-css-1=""
      >
        <div
          data-css-2=""
          data-css-3=""
        >
          <label
            data-css-1=""
          >
            <div
              data-css-9=""
              data-css-1=""
            >
              <div
                data-css-10=""
                data-css-0=""
              >
                <div
                  data-css-11=""
                  data-css-0=""
                >
                  <div
                    data-css-12=""
                    data-css-0=""
                  />
                </div>
              </div>
            </div>
            <div
              data-css-1=""
              data-css-13=""
              style="margin-left:30px"
            >
              <div
                data-css-6=""
                data-css-1=""
              >
                Female
              </div>
            </div>
            <div
              data-css-1=""
              data-css-4=""
            >
              <input
                data-css-8=""
                id="female"
                name="gender"
                type="radio"
                value="female"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        data-css-5=""
        data-css-1=""
      >
        <div
          data-css-2=""
          data-css-3=""
        >
          <label
            data-css-1=""
          >
            <div
              data-css-9=""
              data-css-1=""
            >
              <div
                data-css-14=""
                data-css-0=""
              >
                <div
                  data-css-11=""
                  data-css-0=""
                >
                  <div
                    data-css-15=""
                    data-css-0=""
                  />
                </div>
              </div>
            </div>
            <div
              data-css-1=""
              data-css-13=""
              style="margin-left:30px"
            >
              <div
                data-css-6=""
                data-css-1=""
              >
                Male
              </div>
            </div>
            <div
              data-css-1=""
              data-css-4=""
            >
              <input
                checked=""
                data-css-8=""
                id="male"
                name="gender"
                type="radio"
                value="male"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: RadioButtonSet0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  position: relative;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-4,
[data-css-4] {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.css-5,
[data-css-5] {
  margin-right: 40px;
  width: auto;
}

.css-6,
[data-css-6] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-7,
[data-css-7] {
  opacity: 0;
  margin: 0;
}

.css-8,
[data-css-8] {
  position: relative;
  top: 10px;
}

.css-9,
[data-css-9] {
  background-color: lightGrey;
  border-radius: 50%;
  height: 20px;
  width: 20px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-10,
[data-css-10] {
  background-color: white;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-11,
[data-css-11] {
  background-color: white;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-12,
[data-css-12] {
  position: relative;
  top: -8px;
}

.css-13,
[data-css-13] {
  background-color: #3598db;
  border-radius: 50%;
  height: 20px;
  width: 20px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-14,
[data-css-14] {
  background-color: #3598db;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  transition: background-color 120ms linear;
  -webkit-transition: background-color 120ms linear;
  -moz-transition: background-color 120ms linear;
}

.css-15,
[data-css-15] {
  box-sizing: border-box;
  align-content: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 0 0 auto;
  -webkit-align-content: flex-start;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-flex: 0 0 auto;
}

<div
  data-css-1=""
>
   
  <div
    data-css-1=""
  >
    <div
      data-css-15=""
      style="width:100%"
    >
      <div
        data-css-5=""
        data-css-1=""
      >
        <div
          data-css-2=""
          data-css-3=""
        >
          <label
            data-css-1=""
          >
            <div
              data-css-8=""
              data-css-1=""
            >
              <div
                data-css-9=""
                data-css-0=""
              >
                <div
                  data-css-10=""
                  data-css-0=""
                >
                  <div
                    data-css-11=""
                    data-css-0=""
                  />
                </div>
              </div>
            </div>
            <div
              data-css-1=""
              data-css-12=""
              style="margin-left:30px"
            >
              <div
                data-css-6=""
                data-css-1=""
              >
                Coffe
              </div>
            </div>
            <div
              data-css-1=""
              data-css-4=""
            >
              <input
                data-css-7=""
                id="coffe"
                name="order"
                type="radio"
                value="coffe"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        data-css-5=""
        data-css-1=""
      >
        <div
          data-css-2=""
          data-css-3=""
        >
          <label
            data-css-1=""
          >
            <div
              data-css-8=""
              data-css-1=""
            >
              <div
                data-css-13=""
                data-css-0=""
              >
                <div
                  data-css-10=""
                  data-css-0=""
                >
                  <div
                    data-css-14=""
                    data-css-0=""
                  />
                </div>
              </div>
            </div>
            <div
              data-css-1=""
              data-css-12=""
              style="margin-left:30px"
            >
              <div
                data-css-6=""
                data-css-1=""
              >
                Tee
              </div>
            </div>
            <div
              data-css-1=""
              data-css-4=""
            >
              <input
                checked=""
                data-css-7=""
                id="tee"
                name="order"
                type="radio"
                value="tee"
              />
            </div>
          </label>
        </div>
      </div>
      <div
        data-css-5=""
        data-css-1=""
      >
        <div
          data-css-2=""
          data-css-3=""
        >
          <label
            data-css-1=""
          >
            <div
              data-css-8=""
              data-css-1=""
            >
              <div
                data-css-9=""
                data-css-0=""
              >
                <div
                  data-css-10=""
                  data-css-0=""
                >
                  <div
                    data-css-11=""
                    data-css-0=""
                  />
                </div>
              </div>
            </div>
            <div
              data-css-1=""
              data-css-12=""
              style="margin-left:30px"
            >
              <div
                data-css-6=""
                data-css-1=""
              >
                Others
              </div>
            </div>
            <div
              data-css-1=""
              data-css-4=""
            >
              <input
                data-css-7=""
                id="others"
                name="order"
                type="radio"
                value="others"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: Slider0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  -webkit-appearance: none;
  width: 100%;
  margin: 7px 0;
}

.css-1:focus,
[data-css-1]:focus,
.css-1[data-simulate-focus],
[data-css-1][data-simulate-focus] {
  outline: none;
}

.css-1::-webkit-slider-runnable-track,
[data-css-1]::-webkit-slider-runnable-track,
.css-1[data-simulate-webkitsliderrunnabletrack],
[data-css-1][data-simulate-webkitsliderrunnabletrack] {
  width: 100%;
  height: 2px;
  cursor: pointer;
  background: #4a5256;
  border-radius: 4px;
  border: 0px solid #010101;
}

.css-1::-webkit-slider-thumb,
[data-css-1]::-webkit-slider-thumb,
.css-1[data-simulate-webkitsliderthumb],
[data-css-1][data-simulate-webkitsliderthumb] {
  border: 0px solid #000000;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background: #4a5256;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -7px;
}

.css-1:focus::-webkit-slider-runnable-track,
[data-css-1]:focus::-webkit-slider-runnable-track,
.css-1[data-simulate-focuswebkitsliderrunnabletrack],
[data-css-1][data-simulate-focuswebkitsliderrunnabletrack] {
  background: #646f74;
}

.css-1::-moz-range-track,
[data-css-1]::-moz-range-track,
.css-1[data-simulate-mozrangetrack],
[data-css-1][data-simulate-mozrangetrack] {
  width: 100%;
  height: 2px;
  cursor: pointer;
  background: #4a5256;
  border-radius: 4px;
  border: 0px solid #010101;
}

.css-1::-moz-range-thumb,
[data-css-1]::-moz-range-thumb,
.css-1[data-simulate-mozrangethumb],
[data-css-1][data-simulate-mozrangethumb] {
  border: 0px solid #000000;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background: #4a5256;
  cursor: pointer;
}

.css-1::-ms-track,
[data-css-1]::-ms-track,
.css-1[data-simulate-mstrack],
[data-css-1][data-simulate-mstrack] {
  width: 100%;
  height: 2px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}

.css-1::-ms-fill-lower,
[data-css-1]::-ms-fill-lower,
.css-1[data-simulate-msfilllower],
[data-css-1][data-simulate-msfilllower] {
  background: #303538;
  border: 0px solid #010101;
  border-radius: 4px;
}

.css-1::-ms-fill-upper,
[data-css-1]::-ms-fill-upper,
.css-1[data-simulate-msfillupper],
[data-css-1][data-simulate-msfillupper] {
  background: #4a5256;
  border: 0px solid #010101;
  border-radius: 4px;
}

.css-1::-ms-thumb,
[data-css-1]::-ms-thumb,
.css-1[data-simulate-msthumb],
[data-css-1][data-simulate-msthumb] {
  border: 0px solid #000000;
  height: 2px;
  width: 16px;
  border-radius: 50%;
  background: #4a5256;
  cursor: pointer;
}

.css-1:focus::-ms-fill-lower,
[data-css-1]:focus::-ms-fill-lower,
.css-1[data-simulate-focusmsfilllower],
[data-css-1][data-simulate-focusmsfilllower] {
  background: #4a5256;
}

.css-1:focus::-ms-fill-upper,
[data-css-1]:focus::-ms-fill-upper,
.css-1[data-simulate-focusmsfillupper],
[data-css-1][data-simulate-focusmsfillupper] {
  background: #646f74;
}

<div
  data-css-0=""
>
   
  <div
    data-css-0=""
  >
    <input
      data-css-1=""
      max="200"
      min="20"
      step="10"
      type="range"
    />
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: Spinner0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

<div
  data-css-0=""
>
   
  <svg
    height="30px"
    preserveAspectRatio="xMidYMid"
    viewBox="0 0 100 100"
    width="30px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="none"
      height="100"
      width="100"
      x="0"
      y="0"
    />
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="40"
      stroke="#ffffff"
      stroke-linecap="round"
      stroke-width="10"
    />
    <circle
      cx="50"
      cy="50"
      fill="none"
      r="40"
      stroke="#369980"
      stroke-linecap="round"
      stroke-width="8"
    >
      <animate
        attributeName="stroke-dashoffset"
        dur="2s"
        from="0"
        repeatCount="indefinite"
        to="502"
      />
      <animate
        attributeName="stroke-dasharray"
        dur="2s"
        repeatCount="indefinite"
        values="125.5 125.5;1 250;125.5 125.5"
      />
    </circle>
  </svg>
   
</div>
`;

exports[`Component Examples should match snapshot: SquareIconButton0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  height: 50px;
  width: 50px;
  border-radius: 2px;
  background-color: #e84c3d;
}

@media (max-width: 640px) {
  .css-2,
  [data-css-2] {
    height: 40px;
    width: 40px;
  }
}

<div
  data-css-0=""
>
   
  <div
    data-css-1=""
    data-css-2=""
    textcolor="#333333"
  >
    <div
      data-css-0=""
      style="width:21.5px;height:21.5px;fill:white;stroke:"
    />
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: SwitchList0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  position: relative;
}

.css-2,
[data-css-2] {
  overflow: hidden;
  border: 1px solid #bbbbbb;
  border-radius: 2px;
}

.css-2> *:last-child,
[data-css-2]> *:last-child {
  border-bottom: none;
}

.css-2> *,
[data-css-2]> * {
  border-bottom: 1px solid #bbbbbb;
}

.css-2:hover,
[data-css-2]:hover,
.css-2[data-simulate-hover],
[data-css-2][data-simulate-hover] {
  cursor: pointer;
}

.css-6,
[data-css-7]:hover,
.css-7[data-simulate-hover],
[data-css-7][data-simulate-hover] {
  cursor: pointer;
}

.css-10,
[data-css-10] {
  padding: 10px;
  text-align: center;
}

.css-11,
[data-css-11] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: gray;
}

.css-12,
[data-css-12] {
  background-color: #3598db;
}

.css-12:hover,
[data-css-12]:hover,
.css-12[data-simulate-hover],
[data-css-12][data-simulate-hover] {
  cursor: pointer;
}

.css-16,
[data-css-16] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

<div
  data-css-0=""
>
   
  <div
    data-css-2=""
    data-css-0=""
  >
    <div
      data-css-1=""
      data-css-7=""
      data-css-0=""
      data-e2e="settings-switch-locale-a"
    >
      <div
        data-css-11=""
        data-css-10=""
        data-css-0=""
      >
        Freiburg
      </div>
    </div>
    <div
      data-css-1=""
      data-css-0=""
      data-css-12=""
      data-e2e="settings-switch-locale-b"
    >
      <div
        data-css-10=""
        data-css-16=""
        data-css-0=""
      >
        Berlin
      </div>
    </div>
    <div
      data-css-1=""
      data-css-7=""
      data-css-0=""
      data-e2e="settings-switch-locale-c"
    >
      <div
        data-css-11=""
        data-css-10=""
        data-css-0=""
      >
        München
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: Text0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div
  data-css-0=""
>
   
  <div
    data-css-1=""
    data-css-0=""
  >
     Text will be used for everywhere a text appears. The only exception is in molecules that already provide the text component for you. 
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: Text1 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  white-space: pre-wrap;
  word-break: break-word;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

<div
  data-css-0=""
>
   
  <div
    data-css-0=""
    data-css-1=""
  >
     Textwillbeusedforeverywhereatextappears.Theonlyexceptionisinmoleculesthatalreadyprovidethetextcomponentforyou.Textwillbeusedforeverywhereatextappears.Theonlyexceptionisinmoleculesthatalreadyprovidethetextcomponentforyou. 
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: TextInput0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  position: absolute;
  bottom: 2px;
  right: 15px;
}

.css-3,
[data-css-3] {
  min-height: 50px;
  border-bottom: 1px solid #ecf0f1;
  background-color: white;
}

.css-4,
[data-css-4] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-4:-webkit-autofill ~ .label,
[data-css-4]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-4:-webkit-autofill ~ .checkmark,
[data-css-4]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
}

.css-4:-webkit-autofill,
[data-css-4]:-webkit-autofill,
.css-4[data-simulate-webkitautofill],
[data-css-4][data-simulate-webkitautofill] {
  padding-top: 10px !important;
}

.css-8,
[data-css-8] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-9,
[data-css-9] {
  position: relative;
}

.css-10,
[data-css-10] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  transition: padding-top .225s ease-out;
  height: calc(30px*5);
  width: 100%;
  padding: 10px 15px;
  padding-top: 10px;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-10:invalid:focus,
[data-css-10]:invalid:focus,
.css-10[data-simulate-invalidfocus],
[data-css-10][data-simulate-invalidfocus] {
  color: red;
}

.css-14,
[data-css-14] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

<div
  data-css-1=""
>
   
  <div
    data-css-3=""
    data-css-0=""
  >
    <div
      data-css-9=""
      data-css-1=""
      style="width:100%"
    >
      <input
        aria-required="true"
        data-css-4=""
        name="email"
        placeholder="Your email"
        required=""
        type="email"
      />
      <div
        class="checkmark"
        data-css-8=""
        data-css-1=""
      >
        <div
          data-css-1=""
          style="width:16px;height:16px;fill:lightGrey;stroke:"
        />
      </div>
    </div>
  </div>
  <div
    data-css-3=""
    data-css-0=""
  >
    <div
      data-css-9=""
      data-css-1=""
      style="width:100%"
    >
      <textarea
        data-css-10=""
        maxlength="255"
        minlength="50"
        name="inquiry"
        placeholder="Your question"
        type="text"
      />
      <div
        class="checkmark"
        data-css-8=""
        data-css-1=""
      >
        <div
          data-css-1=""
          style="width:16px;height:16px;fill:lightGrey;stroke:"
        />
      </div>
      <div
        data-css-1=""
        data-css-2=""
      >
        <div
          data-css-14=""
          data-css-1=""
        >
          0/255
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Component Examples should match snapshot: TitleBar0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 0 0 auto;
}

.css-3,
[data-css-3] {
  height: 50px;
  width: 50px;
  border-radius: 2px;
  background-color: transparent;
}

.css-4,
[data-css-4] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}

.css-5,
[data-css-5] {
  height: 50px;
  background-color: #3598db;
  position: relative;
  z-index: 2;
}

.css-6,
[data-css-6] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -webkit-flex: 0 0 auto;
}

@media (max-width: 640px) {
  .css-3,
  [data-css-3] {
    height: 40px;
    width: 40px;
  }
}

<div
  data-css-5=""
  data-css-6=""
>
  <div
    data-css-0=""
  >
    <div
      data-css-2=""
      data-css-3=""
      textcolor="#333333"
    >
      <div
        data-css-1=""
        style="width:21.5px;height:21.5px;fill:white;stroke:"
      />
    </div>
    <div
      data-css-4=""
      data-css-1=""
    >
       Get Relaxed 
    </div>
  </div>
  <div
    data-css-2=""
    data-css-3=""
    textcolor="#333333"
  >
    <div
      data-css-1=""
      style="width:21.5px;height:21.5px;fill:white;stroke:"
    />
  </div>
</div>
`;

exports[`Component Examples should match snapshot: View0 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  align-content: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  height: 100%;
  margin: 0;
  min-height: 100%;
  width: 100%;
  flex: 0 0 auto;
  -webkit-align-content: stretch;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -webkit-flex: 0 0 auto;
}

<div
  data-css-2=""
>
  <div
    data-css-1=""
    data-css-0=""
  >
    Say Hello!
  </div>
</div>
`;
